# QUARCS_QT-SeverProgram

src/: CMakeLists.txt  autofocus.cpp  autofocus.h  autopolaralignment.cpp  autopolaralignment.h  mainwindow.cpp  mainwindow.h  myclient.cpp  myclient.h  starsimulator.cpp  starsimulator.h  tools.cpp  tools.h  websocketclient.cpp  websocketclient.h
